# openhound-jamf

./: .gitignore  .gitmodules  README.md  extension.yaml  justfile  pyproject.toml
.github/workflows/: publish.yml
descriptions/edges/: jamf_AZMatchedEmail.md  jamf_AdminTo.md  jamf_AdminToSite.md  jamf_AssignedUser.md  jamf_Contains.md  jamf_CreateAPIRoles.md  jamf_CreateAccounts.md  jamf_CreateComputerExtensions.md  jamf_CreatePolicies.md  jamf_Create_API_Client_and_Assign_Role.md  jamf_Create_API_Client_and_Create_Role.md  jamf_Create_API_Client_and_Update_Role.md  jamf_MatchedEmail.md  jamf_MatchedName.md  jamf_MemberOf.md  jamf_Okta_Same_Device.md  jamf_SSO_Login.md  jamf_ScriptsNonTraversable.md  jamf_UpdateAPIRoles.md  jamf_UpdateAccounts.md  jamf_UpdateComputerExtensions.md  jamf_UpdatePolicies.md  jamf_Update_API_Client_and_Assign_Role.md  jamf_Update_API_Client_and_Create_Roles.md  jamf_Update_API_Client_and_Update_Roles.md  jamf_Update_Recurring_Scripts.md  jamf_Update_Roles_Assigned_To_Self.md  jamf_Update_SSO_Settings.md  jamf_Update_Self_and_Assign_Roles.md  jamf_Update_Self_and_Create_Roles.md  jamf_Update_Self_and_Update_Roles.md
descriptions/nodes/: jamf_Account.md  jamf_ApiClient.md  jamf_Computer.md  jamf_ComputerUser.md  jamf_DisabledAccount.md  jamf_DisabledApiClient.md  jamf_Group.md  jamf_SSOIntegration.md  jamf_Site.md  jamf_Tenant.md
docs/: og-docs.json
extension/: schema.json
extension/privilege_zone_rules/: tenant.json  tier0-principals.json
extension/saved_searches/: Jamf_All_Account_Paths.json  (+17 more)
tests/: conftest.py  test_collect.py
(+81 files in other folders)
