[project]
name = "openhound-jamf"
dynamic = ["version"]
description = "OpenGraph collector for JAMF using OpenHound"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Lance Cain", email = "lcain@specterops.io" },
    { name = "jdreijer@specterops.io", email = "jdreijer@specterops.io" }
]

[build-system]
requires = ['hatchling', 'hatch-vcs']
build-backend = 'hatchling.build'

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel.force-include]
"extension.yaml" = "openhound_jamf/extension.yaml"

[dependency-groups]
dev = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openhound",
    "pre-commit>=4.5.1",
    "pytest>=9.0.1",
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "zensical>=0.0.27",
]

[project.entry-points."openhound.sources"]
jamf = "openhound_jamf.main:app"
